--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#recipes">Recipes</a></li>
-                <li><a href="#contact">Videos</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -72,7 +72,7 @@
         </form>
     </section>
     <footer>
-        <p>&copy; 2024 Delicious Recipes. All rights reserved.</p>
+        <p>&copy; 2024 Nonnie's Recipes. All rights reserved.</p>
     </footer>
 </body>
 </html>
