--- a/rugelach.html
+++ b/rugelach.html
@@ -16,7 +16,7 @@
         }
 
         header {
-            background-color: #ff6347;
+            background-color: #c04040;
             color: white;
             padding: 15px 0;
             text-align: center;
