--- a/bananacake.html
+++ b/bananacake.html
@@ -5,7 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Cake</title>
     <link rel="stylesheet" href="style.css">
+    <style>#recipe-detail {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+#recipe-detail h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ff6347;
+}
+
+#recipe-detail img {
+    display: block;
+    margin: 0 auto 20px;
+    max-width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#recipe-detail ul {
+    margin-bottom: 20px;
+}
+
+#recipe-detail ol {
+    margin-bottom: 30px;
+}
+
+#recipe-detail ul li,
+#recipe-detail ol li {
+    margin-bottom: 10px;
+}
+
+#recipe-detail ol li {
+    counter-increment: recipe-step;
+    list-style-type: none;
+}
+
+#recipe-detail ol li::before {
+    content: counter(recipe-step) ".";
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+#recipe-detail ol {
+    counter-reset: recipe-step;
+}</style>
 </head>
+    
 <body>
     <header>
         <h1>Banana Cake</h1>
