--- a/bananacake.html
+++ b/bananacake.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Cake</title>
     <link rel="stylesheet" href="style.css">
-    <style>#recipe-detail {
+    <style>
+
+        header{
+           background-color: #c04040}
+        
+        #recipe-detail {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
